--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,27 @@
+body {
+  background-color: grey;
+}
+
 .navbar {
   background-color: blue;
+}
+
+.weatherSearch {
+  margin: 10rem;
+  border: none;
+  border-radius: 10px;
+  height: 4rem;
+  width: 600px;
+}
+
+.searchButton {
+  height: 4rem;
+  width: 20rem;
+  background: #fbca1f;
+  font-family: inherit;
+  padding: 0.6em 1.3em;
+  font-weight: 900;
+  border: 3px, black;
+  border-radius: 0.4em;
+  box-shadow: 0.1em, 0.1em;
 }
