--- a/src/App.css
+++ b/src/App.css
@@ -16,12 +16,24 @@ body {
 
 .searchButton {
   height: 4rem;
-  width: 20rem;
+  width: 15rem;
   background: #fbca1f;
+  border-style: solid;
+  border-color: black;
   font-family: inherit;
-  padding: 0.6em 1.3em;
   font-weight: 900;
-  border: 3px, black;
-  border-radius: 0.4em;
-  box-shadow: 0.1em, 0.1em;
+  font-size: 2rem;
+  text-align: center;
+  border-radius: 30px;
+  box-shadow: 0.1em 0.1em;
+}
+
+.searchButton:hover {
+  transform: translate(-0.05em, -0.05em);
+  box-shadow: 0.15em 0.15em;
+}
+
+.searchButton:active {
+  transform: translate(0.05em, 0.05em);
+  box-shadow: 0.05em 0.05em;
 }
