--- a/src/App.css
+++ b/src/App.css
@@ -6,16 +6,32 @@ body {
   background-color: blue;
 }
 
+div {
+  height: 50rem;
+  background-color: yellow;
+}
+
+.searchBar {
+  background-color: white;
+  margin: 3rem;
+  height: 73px;
+  width: 841px;
+  border-radius: 30px;
+  display: inline-flex;
+}
+
 .weatherSearch {
-  margin: 10rem;
   border: none;
-  border-radius: 10px;
-  height: 4rem;
+  border-radius: 30px;
+  height: 100%;
+  padding-left: 1rem;
+  font-size: larger;
   width: 600px;
+  outline: none;
 }
 
 .searchButton {
-  height: 4rem;
+  height: 95%;
   width: 15rem;
   background: #fbca1f;
   border-style: solid;
