--- a/src/App.css
+++ b/src/App.css
@@ -4,14 +4,33 @@ body {
   background-repeat: no-repeat;
 }
 
-.navbar {
+@keyframes heading {
+  from {
+    opacity: 0;
+  }
+  to {
+    transform: translateY(-200px);
+    opacity: 1;
+  }
+}
+.header > h1 {
+  text-align: center;
+  margin-top: 20rem;
+  color: white;
+  font-size: 3rem;
+  animation-name: heading;
+  animation-duration: 4s;
+  animation-fill-mode: forwards;
 }
 
 div {
-  height: 50rem;
+  height: 30rem;
 }
 
 .searchBar {
+  position: absolute;
+  top: 300px;
+  left: 220px;
   background-color: white;
   margin: 3rem;
   height: 73px;
