--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,7 @@ body {
   background: url("./Cloudy.svg");
   background-size: cover;
   background-repeat: no-repeat;
+  font-weight: 150;
 }
 
 @keyframes heading {
@@ -78,6 +79,9 @@ body {
 }
 
 .weatherCard {
+  position: absolute;
+  left: 34vw;
+  top: 18vh;
   width: 30rem;
   height: 36rem;
   border-radius: 34px;
@@ -92,8 +96,8 @@ body {
 
 .temp {
   position: absolute;
-  right: 36.2rem;
-  top: 16.5rem;
+  right: 7.2vw;
+  top: 13.5vh;
   width: 200px;
   color: white;
   font-size: 6rem;
@@ -112,23 +116,65 @@ body {
 }
 
 .feels_like {
-  background-color: red;
+  color: white;
+  font-size: 2rem;
 }
 
+.feels_like > p {
+  position: absolute;
+  left: 2vw;
+  top: 29.5vh;
+}
+
+.feels_temp {
+  position: absolute;
+  left: 4.4vw;
+  top: 38vh;
+}
+
+.feelsLikeIcon {
+  height: 10px;
+  width: 10px;
+  display: inline-block;
+  position: absolute;
+  top: 38.7vh;
+  left: 7.2vw;
+  border-radius: 30px;
+  border: solid;
+  border-width: 1px;
+  border-color: white;
+}
 .temp_max {
   color: white;
   font-size: 1.5rem;
   position: absolute;
-  top: 23rem;
-  left: 41rem;
+  top: 25vh;
+  left: 12.3vw;
 }
 
 .temp_min {
   color: white;
   font-size: 1.5rem;
   position: absolute;
-  top: 23rem;
-  left: 46rem;
+  top: 25vh;
+  left: 17.5vw;
+}
+
+.humidity {
+  color: white;
+  font-size: 2rem;
+}
+
+.humidity > p {
+  position: absolute;
+  top: 43vh;
+  left: 2vw;
+}
+
+.humidity > div {
+  position: absolute;
+  top: 52vh;
+  left: 4vw;
 }
 
 .queryLocation {
@@ -136,4 +182,5 @@ body {
   text-align: center;
   padding-top: 1rem;
   font-size: 4rem;
+  font-weight: 150;
 }
