--- a/src/App.css
+++ b/src/App.css
@@ -85,8 +85,12 @@ body {
   width: 30rem;
   height: 36rem;
   border-radius: 34px;
-  background: #2d4578;
   box-shadow: 20px 20px 41px #23355c, -20px -20px 41px #375594;
+}
+
+.weather-rain {
+  background: url("../src/rain.gif");
+  background-size: cover;
 }
 
 .reportError {
